--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -18,5 +18,6 @@
     "./dist/**/*",
     "node_modules/**/*",
     ".git/**/*"
-  ]
+  ],
+  "typescript.preferences.importModuleSpecifier": "relative"
 }
