swagger-ui*を非表示

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
   "files.exclude": {
     "dist/**/*": true,
     "node_modules/**/*": true,
+    "docs/**/swagger-ui*": true,
   },
   "files.autoGuessEncoding": true,
   "typescript.validate.enable": true,
